WIP: adding initial code for flow processing

--- a/admin/src/main/ui/src/index.html
+++ b/admin/src/main/ui/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div style="text-align: center"><img src="assets/loader.gif"/></div>
+  </app-root>
 </body>
 </html>
