--- a/admin/src/main/ui/src/index.html
+++ b/admin/src/main/ui/src/index.html
@@ -5,7 +5,7 @@
   <title>Ui</title>
   <base href="index.html">
 
-  <meta firstName="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
